--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,6 +1,6 @@
 PORT=application_run_port
 
-DATABASE_URL=<DB_USERNAME>:<DB_PASSWORD>@<DB_HOST>:<DB_PORT>/<DB_NAME>
+DATABASE_URL=postgres://<DB_USERNAME>:<DB_PASSWORD>@<DB_HOST>:<DB_PORT>/<DB_NAME>
 
 SECRET_KEY=jwt_secret_key
 EXPIRES_IN=jwt_expires_in
